--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -7,9 +6,15 @@
 
 
 :root {
---bokkw-ski: 55vh;
---btnsArea-height-ski: 100px;
-/* bok kwadratu na obrazek */
+    
+    --content-width-ski: 70vw;
+    --content-height-ski: 90vh;
+    --btnsArea-height-ski: 100px;
+
+    /* bok kwadratu na obrazek */
+    --pctAreaWidth-ski : calc(0.6 * var(--content-width-ski));
+    --pctAreaHeight-ski: calc(0.6 * var(--content-width-ski));
+
 }
 
 body {
@@ -19,8 +24,8 @@ body {
 
 #content {
     background-color: #ccc;
-    width: 70vw;
-    height: 90vh;
+    width:  var(--content-width-ski);
+    height: var(--content-height-ski);
     margin-top: 2%;
     padding-top: 2%;
     margin-left: auto;
@@ -29,9 +34,15 @@ body {
 
 
 div#pctArea {
-    width: var(--bokkw-ski);
-    height: var(--bokkw-ski);
-    margin-left:  auto;
+
+    /* width:  calc(0.6 * var(--content-width-ski)); */
+
+
+    width:  var(--pctAreaWidth-ski);
+    height: var(--pctAreaWidth-ski);
+
+
+    margin-left: auto;
     margin-right: auto;
     /* obrazek: */
     background-repeat: no-repeat;
@@ -44,17 +55,24 @@ div#pctArea {
 }
 
 div#btnsArea {
-    margin-top:4%;
+    margin-top: 4%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    width: calc(1.5*var(--bokkw-ski));
+    /* width: calc(1.5*var(--bokkw-ski)); */
+
+
+    width: calc(1.3* var(--pctAreaWidth-ski));
+
     height: var(--btnsArea-height-ski);
     /* background-color: green; */
-    border: 1px dotted black;;
+    border: 1px dotted black;
+    ;
 }
 
-div#bNazad, div#bWpieriod {
+div#bNazad,
+div#bWpieriod {
+    position: relative;
     display: inline-block;
     height: inherit;
     width: 35%;
@@ -63,11 +81,12 @@ div#bNazad, div#bWpieriod {
 }
 
 div#bNazad {
-    margin-right: 150px;
+    margin-right: 10px;
 }
+
 
 
 div#btnsArea p {
     font-size: 300%;
     line-height: var(--btnsArea-height-ski);
-} 
+}
