--- a/style.css
+++ b/style.css
@@ -4,17 +4,12 @@
     box-sizing: border-box;
 }
 
-
 :root {
-    
     --content-width-ski: 70vw;
-    --content-height-ski: 90vh;
-    --btnsArea-height-ski: 100px;
-
+    --content-height-ski: 95vh;
+    --btnsArea-height-ski: calc(0.1 * var(--content-height-ski));
     /* bok kwadratu na obrazek */
-    --pctAreaWidth-ski : calc(0.6 * var(--content-width-ski));
-    --pctAreaHeight-ski: calc(0.6 * var(--content-width-ski));
-
+    --pctAreaSide-ski: calc(0.5 * var(--content-width-ski));
 }
 
 body {
@@ -24,7 +19,7 @@ body {
 
 #content {
     background-color: #ccc;
-    width:  var(--content-width-ski);
+    width: var(--content-width-ski);
     height: var(--content-height-ski);
     margin-top: 2%;
     padding-top: 2%;
@@ -32,16 +27,9 @@ body {
     margin-right: auto;
 }
 
-
 div#pctArea {
-
-    /* width:  calc(0.6 * var(--content-width-ski)); */
-
-
-    width:  var(--pctAreaWidth-ski);
-    height: var(--pctAreaWidth-ski);
-
-
+    width: var(--pctAreaSide-ski);
+    height: var(--pctAreaSide-ski);
     margin-left: auto;
     margin-right: auto;
     /* obrazek: */
@@ -59,20 +47,14 @@ div#btnsArea {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    /* width: calc(1.5*var(--bokkw-ski)); */
-
-
-    width: calc(1.3* var(--pctAreaWidth-ski));
-
+    width: var(--content-width-ski);
     height: var(--btnsArea-height-ski);
     /* background-color: green; */
     border: 1px dotted black;
     ;
 }
 
-div#bNazad,
-div#bWpieriod {
-    position: relative;
+div#bNazad, div#bWpieriod {
     display: inline-block;
     height: inherit;
     width: 35%;
@@ -81,12 +63,27 @@ div#bWpieriod {
 }
 
 div#bNazad {
-    margin-right: 10px;
+    margin-right: 10%;
 }
-
-
 
 div#btnsArea p {
     font-size: 300%;
     line-height: var(--btnsArea-height-ski);
+}
+
+@media (max-width:1024px) {
+
+
+    :root {
+        --content-width-ski: 70vw;
+        --content-height-ski: 95vh;
+        --btnsArea-height-ski: calc(0.07 * var(--content-height-ski));
+        /* bok kwadratu na obrazek */
+        --pctAreaSide-ski: calc(0.7 * var(--content-width-ski));
+    }
+
+
+    div#btnsArea p {
+        font-size: 200%;
+    }
 }
