--- a/style.css
+++ b/style.css
@@ -45,13 +45,13 @@ div#pctArea {
 }
 
 div#btnsArea {
+    visibility: hidden;
     margin-top: 4%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     width: var(--content-width-ski);
     height: var(--btnsArea-height-ski);
-    visibility: hidden;
     /* background-color: green; */
     /* border: 1px dotted black; */
 }
@@ -86,54 +86,71 @@ div#homepage a {
 }
 
 div#bLewy, div#bPrawy {
-    visibility: hidden;;
-    position:absolute;
+    visibility: hidden;
+    ;
+    position: absolute;
     display: inline-block;
-    width:18%;
-    height:75%;
-    top: 5%;
-    background-color: red;
-    border: 1px solid black;;
+    width: 18%;
+    height: 75%;
+    top: 1.7%;
+    /* background-color: red; */
+    border: 2px solid black;
+    ;
 }
 
 div#bLewy {
-    left:1%;
+    left: 1%;
 }
 
 div#bPrawy {
-    right:1%;
+    right: 1%;
 }
 
+div#bLewy p, div#bPrawy p {
+    position: relative;
+    top: 40%;
+    text-align: center;
+    font-size: 2.5em;
+    /* background-color: green; */
+}
 
 @media (max-width:1024px) {
     :root {
         --content-width-ski: 80vw;
         --content-height-ski: 65vh;
         /* bok kwadratu na obrazek */
-        --pctAreaSide-ski: calc(0.7 * var(--content-width-ski));
+        --pctAreaSide-ski: calc(0.8 * var(--content-width-ski));
+    }
+    
+    #content {
+        margin-top: 1%;
+    }
+    div#btnsArea {
+        height: calc(2.5*var(--btnsArea-height-ski));
     }
     div#btnsArea p {
         font-size: 200%;
+        line-height: 400%;
     }
     div#homepage {
-        font-size: 1.5em;
+        font-size: 1.8em;
     }
 }
 
 @media (max-width:880px) and (orientation: landscape) {
     :root {
         --content-width-ski: 60vw;
-        --content-height-ski: 85vh;
+        --content-height-ski: 75vh;
         /* bok kwadratu na obrazek */
         --pctAreaSide-ski: calc(0.9 * var(--content-height-ski));
     }
-
     div#btnsArea {
-        display:none;
+        display: none;
     }
-
     div#bLewy, div#bPrawy {
         visibility: visible;
     }
-
+    div#homepage {
+        bottom: 40px;
+    }
 }
