--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ div#bNazad {
     margin-right: 10%;
 }
 
-div#btnsArea p {
+div#bNazad p, div#bWpieriod p {
     font-size: 300%;
     line-height: var(--btnsArea-height-ski);
 }
